WIP feature/upgrade jdk to 11 (#194)
* Fiks avhengigheter i hoved-, domain- og consumer-pom

* Fiks business-pom + midlertidig skru av failsafe plugin i web

* Oppgrader bygg-image og legg til instruksjoner i README

* Skru på integrasjonstester med maven-failsafe-plugin

* Fiks JAXB/SOAP-avhengigheter

* Fjern runtime-avhengighet til javax.annotation-api fra a0ac1b1d

* Reduser LocalDateTime-presisjon til millisekunder i DB-tester

* oppgraderer maven plugins: cxf-codegen-plugin, maven-jar-plugin, maven-compiler-plugin, maven-dependency-plugin

* fjerner jboss-as-maven-plugin. jboss er vel neppe nødvendig lengre

* forsøker å overskrive jacoco plugin fra morpom

* oppgraderer jersey-dependencies til å støtte jdk 11

* oppgraderer maven-surefire-plugin, og setter illegal-access=permit

* endrer Dockerfile til å kjøre `mvn install` for å også kjøre integrasjonstestene

* oppgraderer maven-failsafe-plugin

* fjerner "com.sun.xml"-dependencies og "jetty"-profil

* oppgraderer asm og hk2

* dockerfile med java:11

Co-authored-by: Per-Christian Nielsen <per.christian.nielsen@nav.no>
Co-authored-by: Martin Tveter <martin.skjelsvik.tveter@nav.no>